<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">manaTEAMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_login">Login</string>
    <string name="text_login_quote">\“All our dreams can come true, if we have the courage to pursue them.\”</string>
    <string name="text_login_quote_author">-Walt Disney</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="toast_fill_info">Please fill out all login credentials.</string>
    <string name="hint_login_id">Student ID</string>
    <string name="text_card_class_title_default">AP US HIST</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="toast_login_failed">Login failed. Please try again.</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string-array name="drawer_array">
        <item>Grades</item>
        <item>GPA</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="misc_cycle">C</string>
    <string name="misc_final">Exam</string>
    <string name="misc_avg">Avg</string>
    <string name="misc_average">Average</string>
    <string name="text_navigation_default">Grades</string>
    <string name="title_activity_assignment">AssignmentActivity</string>
    <string name="dialog_assignment_loading">Loading assignments…</string>
    <string name="dialog_aisd_wifi_title">Connected to AISD-GUEST</string>
    <string name="dialog_aisd_wifi_message">You\'re currently connected to AISD-GUEST Wi-Fi network, but AISD blocks TEAMS on this network. \n\nIn order to view your grades, please switch to cellular data or another Wi-Fi source.</string>
    <string name="dialog_aisd_wifi_close">Close</string>
    <string name="dialog_aisd_wifi_change_network">Change network</string>
    <string name="text_card_category_assignment_title_default">Tests and Projects</string>
    <string name="text_card_category_assignment_weight_default">40%</string>
    <string name="text_card_category_assignment_average_default">Category Average: 92</string>
    <string name="text_row_assignment_assignment_default">Object Oriented Test 4</string>
    <string name="text_row_assignment_grade_default">80</string>
    <string name="text_card_category_assignment_weight_null">N/A</string>
    <string name="hint_add_grade"><font size="16">+</font></string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_grades">GRADES</string>
    <string name="pref_category_gpa">GPA</string>
    <string name="pref_showGradeColor">Highlight grades</string>
    <string name="pref_showGradeColor_summ">The lighter the color, the better the grade</string>
    <string name="pref_chooseWeighted">Choose weighted classes</string>
    <string name="pref_chooseExcluded">Choose excluded classes</string>
    <string name="pref_category_notifications">NOTIFICATIONS</string>
    <string name="pref_showNotifications">Show notifications</string>
    <string name="pref_showNotifications_summ">Notify me when my grade changes in a class</string>
    <string name="text_gpa_unweighted">Unweighted GPA</string>
    <string name="text_gpa_weighted">Weighted</string>
    <string name="text_lastupdated_default">Grades not updated - pull down to refresh</string>
    <string name="text_course_lastupdated_default">Grades not updated yet</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="secondary_login_info">If you use separate credentials for your TEAMS account, enter them below</string>
    <string name="secondary_login_title">Secondary Login</string>
    <string name="text_gpa_default">GPA: 4.205 / 3.057</string>
    <string name="text_title">manaTEAMS</string>
    <string name="text_people">By Neil Patil and Ehsan Asdar</string>
    <string name="text_by">by</string>
    <string name="text_neil">Neil Patil</string>
    <string name="text_and">and</string>
    <string name="text_ehsan">Ehsan Asdar</string>
    <string name="cancel">Cancel</string>

    <string name="gpa_intro_title">GPA Display</string>
    <string name="gpa_intro_content">Tap on your GPA to select weighted classes</string>

    <string name="grades_intro_title">View Assignments</string>
    <string name="grades_intro_content">Tap a course to view assignment grades</string>

    <string name="graph_intro_title">Course Graph</string>
    <string name="graph_intro_content">Charts your daily grade in a class over an extended period of time</string>
    <string name="text_card_no_grades_title">No grades :(</string>
    <string name="text_no_grades">No grades :(</string>
    <string name="text_login_instructions">Log in with the credentials you use to sign into my.austinisd.org.</string>
    <string name="action_refresh">Refresh</string>

    <string name="rate_dialog_title">Share this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to share it with your friends? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Share It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>


</resources>
