<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/text_login"
            android:textSize="56sp" />

        <TextView
            android:id="@+id/text_login_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_login"
            android:layout_marginTop="24dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/text_login_quote"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_login_quote_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_login_quote"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/text_login_quote_author"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_login_quote_author"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login_username"
                android:padding="18dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edittext_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_login_username"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:singleLine="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/edittext_login_password"
                android:elevation="5dp"
                android:padding="18dp"
                android:text="@string/button_login" />
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>