<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="36dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_title"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/text_by"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:gravity="center"
            android:text="@string/text_by"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_neil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/text_neil"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttons_neil">
            <ImageButton
                android:layout_width="60dp"
                android:src="@drawable/ic_email_white_48dp"
                android:onClick="onNeilEmailClick"
                android:background="@color/app_primary"
                android:layout_height="60dp" />
            <ImageButton
                android:layout_width="60dp"
                android:src="@drawable/ic_launch_white_48dp"
                android:onClick="onNeilWebsiteClick"
                android:background="@color/app_primary"
                android:layout_height="60dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_ehsan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/text_ehsan"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttons_ehsan">
            <ImageButton
                android:layout_width="60dp"
                android:src="@drawable/ic_email_white_48dp"
                android:onClick="onEhsanEmailClick"
                android:background="@color/app_primary"
                android:layout_height="60dp" />
            <ImageButton
                android:layout_width="60dp"
                android:src="@drawable/ic_launch_white_48dp"
                android:onClick="onEhsanWebsiteClick"
                android:background="@color/app_primary"
                android:layout_height="60dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>